[gd_scene load_steps=2 format=3 uid="uid://cset3neym8nhv"]

[ext_resource type="Script" path="res://score_screen.gd" id="1_3s7dn"]

[node name="ScoreScreen" type="Node"]
script = ExtResource("1_3s7dn")

[node name="FinalScore" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 55
horizontal_alignment = 1
vertical_alignment = 1

[node name="BurnBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.505882, 0.266667, 1)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
grow_horizontal = 0
grow_vertical = 2
value = 10.0
fill_mode = 3
show_percentage = false

[node name="BurnTimer" type="Timer" parent="."]
wait_time = 500.0
